[gd_scene load_steps=15 format=2]

[ext_resource path="res://nodes/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ControllerPlayer2.gd" type="Script" id=4]
[ext_resource path="res://scripts/BallController.gd" type="Script" id=5]
[ext_resource path="res://assets/Fonts/Back to School.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/ControllerPlayer1.gd" type="Script" id=7]
[ext_resource path="res://scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://assets/Images/paddle_water.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/paddle_fire.png" type="Texture" id=10]
[ext_resource path="res://assets/Songs/MainSong.ogg" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 287.047 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 450, 300 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Ball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Area2D"]
shape = SubResource( 1 )

[node name="PaddlePlayer1" parent="." instance=ExtResource( 1 )]
position = Vector2( 13.1122, 300 )
script = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="PaddlePlayer1"]
texture = ExtResource( 9 )

[node name="PaddlePlayer2" parent="." instance=ExtResource( 1 )]
position = Vector2( 885, 300 )
script = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="PaddlePlayer2"]
texture = ExtResource( 10 )
flip_h = true

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -54.2888, 299.237 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 953.481, 301.047 )
shape = SubResource( 2 )

[node name="ScorePlayer1" type="Label" parent="."]
margin_left = -200.0
margin_right = 900.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayer2" type="Label" parent="."]
margin_left = 200.0
margin_right = 900.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -47.286
autoplay = true
[connection signal="body_entered" from="Ball/Area2D" to="." method="_on_Ball_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
